--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,6 @@
                 /* ==================== */
 /*====================TEST TEST TEST====================*/
-.card {
-    margin-left: 0;
-    margin-right: 0;
-    padding-left: 0;
-    padding-right: 0;
-}
+
 /*====================Universals====================*/
 html {
     overflow: scroll;
@@ -18,6 +13,10 @@ html {
 /* ::-webkit-scrollbar-thumb {
     background: #FF0000;
 } */
+.ghettoScroll {
+    background: none;
+    border: none;
+}
 
 
 /*====================Body====================*/
@@ -72,6 +71,7 @@ html {
 /*====================Navigation====================*/
 .navbar {
     background-color: #A26CCC;
+    opacity: 0.8;
 }/* Navigation Color */
 #navLogo {
     max-height: 30px;
@@ -84,9 +84,51 @@ html {
     outline: none;
 }/* Navbar Toggler */
 .navbar .navbar-toggler-icon{
-    background-color: #A26CCC; /* Changes toggle color on hover */
+    background-color: #A26CCC;
 }/* Navbar Toggler Icon */
 
 
+/*========================================Cards========================================*/
 
 /*====================Header====================*/
+#headerCard {
+    margin: 0 auto;
+    float: none;
+    height: 750px;
+    width: 750px;
+    background-color: #30393A;
+    /* opacity: 0.8; */
+    border: none;
+    background: none;
+}
+#headerCardBody {
+    color: black;
+}
+#headerCardBody h1 {
+    font-size: 70px;
+}
+#headerCardBody p {
+    font-size: 30px;
+    color: black;
+}
+#headerCardBody #signInBtn {
+    background-color: #A26CCC;
+    color: black;
+    opacity: 0.8;
+    border: none;
+    outline: none;
+    max-width: 175px;
+    max-height: 40px;
+}
+#headerLogo {
+    max-height: 225px;
+    max-width: 225px;
+    margin-bottom: 30px;
+    align-self: center;
+}
+.vertical-center {
+    min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+    min-height: 100vh; /* These two lines are counted as one :-)       */
+    display: flex;
+    align-items: center;
+}
