--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,6 @@
 @import url(font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,800,800italic");
 
-/*
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -1859,7 +1853,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			box-shadow: 0 0 0 2px #21b2a6;
+			box-shadow: 0 0 0 2px #b22121;
 		}
 
 	select {
@@ -2056,16 +2050,17 @@ input, select, textarea {
 
 			}
 
+		/* TOP CONTENT ICONS */
 		.icon.style1 {
-			color: #00ffcc;
+			color: #30393A;
 		}
 
 		.icon.style2 {
-			color: #00f0ff;
+			color: #30393A;
 		}
 
 		.icon.style3 {
-			color: #76ddff;
+			color: #30393A;
 		}
 
 /* Image */
@@ -2466,7 +2461,7 @@ input, select, textarea {
 		input[type="button"].primary,
 		button.primary,
 		.button.primary {
-			background-color: #ed4933;
+			background-color: #A26CCC;
 			box-shadow: none !important;
 			color: #ffffff !important;
 		}
@@ -2476,7 +2471,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #ef5e4a !important;
+				background-color: #30393A !important;
 			}
 
 			input[type="submit"].primary:active,
@@ -2484,7 +2479,7 @@ input, select, textarea {
 			input[type="button"].primary:active,
 			button.primary:active,
 			.button.primary:active {
-				background-color: #eb341c !important;
+				background-color: #A26CCC !important;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -2541,6 +2536,7 @@ input, select, textarea {
 			width: 50%;
 		}
 
+			/* BOTTOM CONTENT TILE BACKGROUND */
 			.features li:nth-child(1) {
 				background-color: rgba(0, 0, 0, 0.035);
 			}
@@ -2581,9 +2577,10 @@ input, select, textarea {
 				background-color: rgba(0, 0, 0, 0.35);
 			}
 
+			/* BOTTOM CONTENT ICONS */
 			.features li:before {
 				display: block;
-				color: #00ffcc;
+				color: #30393A;
 				position: absolute;
 				left: 1.75em;
 				top: 2.75em;
@@ -2682,43 +2679,43 @@ input, select, textarea {
 		}
 
 		.spotlight:nth-child(1) {
-			background-color: rgba(0, 0, 0, 0.075);
+			background-color: rgba(48, 57, 58, 0.075);
 		}
 
 		.spotlight:nth-child(2) {
-			background-color: rgba(0, 0, 0, 0.15);
+			background-color: rgba(48, 57, 58, 0.15);
 		}
 
 		.spotlight:nth-child(3) {
-			background-color: rgba(0, 0, 0, 0.225);
+			background-color: rgba(48, 57, 58, 0.225);
 		}
 
 		.spotlight:nth-child(4) {
-			background-color: rgba(0, 0, 0, 0.3);
+			background-color: rgba(48, 57, 58, 0.3);
 		}
 
 		.spotlight:nth-child(5) {
-			background-color: rgba(0, 0, 0, 0.375);
+			background-color: rgba(48, 57, 58, 0.375);
 		}
 
 		.spotlight:nth-child(6) {
-			background-color: rgba(0, 0, 0, 0.45);
+			background-color: rgba(48, 57, 58, 0.45);
 		}
 
 		.spotlight:nth-child(7) {
-			background-color: rgba(0, 0, 0, 0.525);
+			background-color: rgba(48, 57, 58, 0.525);
 		}
 
 		.spotlight:nth-child(8) {
-			background-color: rgba(0, 0, 0, 0.6);
+			background-color: rgba(48, 57, 58, 0.6);
 		}
 
 		.spotlight:nth-child(9) {
-			background-color: rgba(0, 0, 0, 0.675);
+			background-color: rgba(48, 57, 58, 0.675);
 		}
 
 		.spotlight:nth-child(10) {
-			background-color: rgba(0, 0, 0, 0.75);
+			background-color: rgba(48, 57, 58, 0.75);
 		}
 
 		@media screen and (max-width: 1280px) {
@@ -2796,7 +2793,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #21b2a6;
+			background-color: #A26CCC;
 			color: #c8ece9;
 		}
 
@@ -2809,19 +2806,19 @@ input, select, textarea {
 			}
 
 			.wrapper.style1 hr {
-				border-color: rgba(0, 0, 0, 0.125);
+				border-color: rgba(48, 57, 58, 0.125);
 			}
 
 			.wrapper.style1 blockquote {
-				border-color: rgba(0, 0, 0, 0.125);
+				border-color: rgba(48, 57, 58, 0.125);
 			}
 
 			.wrapper.style1 code {
-				background: rgba(255, 255, 255, 0.075);
+				background: rgba(48, 57, 58, 0.075);
 			}
 
 			.wrapper.style1 header p {
-				color: #a6e0db;
+				color: rgb(58, 48, 48);
 			}
 
 			.wrapper.style1 header.major h2, .wrapper.style1 header.major h3, .wrapper.style1 header.major h4, .wrapper.style1 header.major h5, .wrapper.style1 header.major h6 {
@@ -2955,11 +2952,11 @@ input, select, textarea {
 			}
 
 		.wrapper.style2 {
-			background-color: #2e3842;
+			background-color: #30393A;
 		}
 
 		.wrapper.style3 {
-			background-color: #505393;
+			background-color: #A26CCC;
 			color: #d3d4e4;
 		}
 
@@ -3013,7 +3010,7 @@ input, select, textarea {
 
 				.wrapper.style3 select option {
 					color: #ffffff;
-					background: #505393;
+					background: #935050;
 				}
 
 			.wrapper.style3 input[type="checkbox"] + label,
@@ -3330,7 +3327,7 @@ input, select, textarea {
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #21b2a6;
+		background: #30393A;
 		color: #ffffff;
 		height: 100%;
 		max-width: 80%;
@@ -3370,7 +3367,6 @@ input, select, textarea {
 					text-decoration: none;
 					text-transform: uppercase;
 				}
-
 					@media screen and (max-width: 736px) {
 
 						#menu ul > li > a {
@@ -3424,7 +3420,7 @@ input, select, textarea {
 		-webkit-transition: background-color 0.2s ease;
 		-ms-transition: background-color 0.2s ease;
 		transition: background-color 0.2s ease;
-		background: #2e3842;
+		background: #A26CCC;
 		height: 3em;
 		left: 0;
 		line-height: 3em;
@@ -3432,6 +3428,7 @@ input, select, textarea {
 		top: 0;
 		width: 100%;
 		z-index: 10000;
+		opacity: 0.8;
 	}
 
 		#header h1 {
@@ -3561,6 +3558,7 @@ input, select, textarea {
 		overflow: hidden;
 		position: relative;
 		text-align: center;
+		background: #30393A;
 	}
 
 		#banner h2 {
@@ -3662,6 +3660,7 @@ input, select, textarea {
 				width: 1.5em;
 			}
 
+		/* LOAD IN ANIMATION */
 		#banner:after {
 			pointer-events: none;
 			-moz-transition: opacity 3s ease-in-out;
@@ -3673,7 +3672,7 @@ input, select, textarea {
 			-ms-transition-delay: 1.25s;
 			transition-delay: 1.25s;
 			content: '';
-			background: #2e3842;
+			background: #000000;
 			display: block;
 			width: 100%;
 			height: 100%;
@@ -3689,6 +3688,7 @@ input, select, textarea {
 				padding: 7em 3em 5em 3em ;
 				height: auto;
 				min-height: 0;
+				background-color: #30393A;
 			}
 
 				#banner h2 {
@@ -3793,10 +3793,10 @@ input, select, textarea {
 
 	#main > header {
 		padding: 12em 0 10em 0 ;
-		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
-		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
-		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
-		background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
+		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
+		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
+		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
+		background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
 		background-attachment: fixed;
 		background-position: center center;
 		background-repeat: no-repeat;
@@ -3865,7 +3865,7 @@ input, select, textarea {
 
 	#footer {
 		padding: 6em 0 4em 0 ;
-		background-color: #1d242a;
+		background-color: #30393A;
 		text-align: center;
 	}
 
@@ -3943,10 +3943,10 @@ input, select, textarea {
 /* Landing */
 
 	body.landing #page-wrapper {
-		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
-		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
-		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
-		background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
+		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
+		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
+		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
+		background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
 		background-attachment: fixed;
 		background-position: center center;
 		background-repeat: no-repeat;
@@ -3955,24 +3955,13 @@ input, select, textarea {
 	}
 
 	body.landing #footer {
-		background-color: rgba(29, 36, 42, 0.9);
+		background-color: #30393A;
 	}
 
 	body.is-mobile.landing #page-wrapper {
 		background: none;
 	}
 
-	body.is-mobile.landing #banner,
-	body.is-mobile.landing .wrapper.style4 {
-		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
-		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
-		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
-		background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
-		background-position: center center;
-		background-repeat: no-repeat;
-		background-size: cover;
-	}
-
 	body.is-mobile.landing #footer {
-		background-color: #1d242a;
+		background-color: #30393A;
 	}
