--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -462,7 +462,7 @@ body {
 		}
 
 		.button.primary {
-			background-color: #A26CCC;
+			background-color: #63DA00;
 			box-shadow: none !important;
 			color: #ffffff !important;
 		}
@@ -472,7 +472,7 @@ body {
 			}
 
 			.button.primary:active {
-				background-color: #A26CCC !important;
+				background-color: #63DA00 !important;
 			}
 
 		.button:disabled {
@@ -730,7 +730,7 @@ body {
 		}
 
 		.wrapper.style1 {
-			background-color: #A26CCC;
+			background-color: #63DA00;
 			color: #c8ece9;
 		}
 
@@ -775,7 +775,7 @@ body {
 		}
 
 		.wrapper.style3 {
-			background-color: #A26CCC;
+			background-color: #63DA00;
 			color: #d3d4e4;
 		}
 
@@ -962,7 +962,7 @@ body.is-menu-visible #menu {
 	-webkit-transition: background-color 0.2s ease;
 	-ms-transition: background-color 0.2s ease;
 	transition: background-color 0.2s ease;
-	background: #A26CCC;
+	background: #63DA00;
 	height: 3em;
 	left: 0;
 	line-height: 3em;
