--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,7 +54,7 @@ body {
 		}
 
 	body {
-		color: #fff;
+		color:white;
 		font-family: "Open Sans", Helvetica, sans-serif;
 		font-size: 15pt;
 		font-weight: 400;
@@ -106,7 +106,7 @@ body {
 	}
 
 	h1, h2, h3 {
-		color: #fff;
+		color: white;
 		font-weight: 800;
 		letter-spacing: 0.225em;
 		line-height: 1em;
@@ -166,7 +166,7 @@ body {
 	}
 
 		header.major h2 {
-			border-bottom: solid 2px #fff;
+			border-bottom: solid 2px white;
 			display: inline-block;
 			padding-bottom: 1em;
 			position: relative;
@@ -179,7 +179,7 @@ body {
 			}
 
 		header.major p {
-			color: #fff;
+			color: white;
 			top: 0;
 		}
 
@@ -250,7 +250,7 @@ body {
 			-ms-transform: rotate(-45deg);
 			transform: rotate(-45deg);
 			border-radius: 3px;
-			border: solid 2px #fff;
+			border: solid 2px white;
 			display: inline-block;
 			font-size: 1.35em;
 			height: calc(3em + 2px);
@@ -434,8 +434,8 @@ body {
 		background-color: transparent;
 		border-radius: 3px;
 		border: 0;
-		box-shadow: inset 0 0 0 2px #fff;
-		color: #fff;
+		box-shadow: inset 0 0 0 2px white;
+		color: white;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8em;
@@ -464,7 +464,7 @@ body {
 		.button.primary {
 			background-color: #008C17;
 			box-shadow: none !important;
-			color: #ffffff !important;
+			color: white !important;
 		}
 
 			.button.primary:hover {
@@ -589,7 +589,7 @@ body {
 				.features li {
 					padding: 3em 0 1em 0 ;
 					background-color: transparent !important;
-					border-top: solid 2px #fff;
+					border-top: solid 2px white;
 					width: 100%;
 				}
 
@@ -735,7 +735,7 @@ body {
 		}
 
 			.wrapper.style1 h2 {
-				color: #ffffff;
+				color: white;
 			}
 
 			.wrapper.style1 header p {
@@ -780,7 +780,7 @@ body {
 		}
 
 			.wrapper.style3 h2, .wrapper.style3 h3 {
-				color: #ffffff;
+				color: white;
 			}
 
 			.wrapper.style3 header p {
@@ -870,7 +870,7 @@ body {
 	transition: transform 0.5s ease;
 	-webkit-overflow-scrolling: touch;
 	background: #30393A;
-	color: #ffffff;
+	color: white;
 	height: 100%;
 	max-width: 80%;
 	overflow-y: auto;
@@ -1022,7 +1022,7 @@ body.is-menu-visible #menu {
 
 				#header nav > ul > li > a {
 					border: 0;
-					color: #fff;
+					color: white;
 					display: block;
 					font-size: 0.8em;
 					letter-spacing: 0.225em;
@@ -1129,7 +1129,7 @@ body.is-menu-visible #menu {
 			-webkit-transition-delay: 0.25s;
 			-ms-transition-delay: 0.25s;
 			transition-delay: 0.25s;
-			background: #fff;
+			background: white;
 			content: '';
 			display: block;
 			height: 2px;
@@ -1420,7 +1420,7 @@ body.is-mobile #main > header {
 			}
 
 				#footer .icons a:hover {
-					color: #fff;
+					color: white;
 				}
 
 		#footer .copyright {
@@ -1451,7 +1451,7 @@ body.is-mobile #main > header {
 				}
 
 					#footer .copyright li a:hover {
-						color: #fff;
+						color: white;
 					}
 
 				@media screen and (max-width: 480px) {
