--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -962,7 +962,7 @@ body.is-menu-visible #menu {
 	-webkit-transition: background-color 0.2s ease;
 	-ms-transition: background-color 0.2s ease;
 	transition: background-color 0.2s ease;
-	background: #008C17;
+	background: red;/* Temporary */
 	height: 3em;
 	left: 0;
 	line-height: 3em;
