--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1363,3 +1363,131 @@ body.is-mobile #main > header {
 			}
 
 		}
+
+/* Mid Content Images */
+.spotlight {
+	height: 25.0em;
+}
+.spotlight .content p {
+	font-size: 1.20em;
+}
+#loopy {
+	height: 25.0em;
+	position: relative;
+}
+#loopy img {
+	height: 100%;
+	position: absolute;
+}
+	
+@-webkit-keyframes imgFade {
+	0% {
+		opacity: 1;
+	}
+	17% {
+		opacity: 1;
+	}
+	25% {
+		opacity: 0;
+	}
+	92% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+	
+@-moz-keyframes imgFade {
+	0% {
+		opacity: 1;
+	}
+	17% {
+		opacity: 1;
+	}
+	25% {
+		opacity: 0;
+	}
+	92% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+	
+@-o-keyframes imgFade {
+	0% {
+		opacity: 1;
+	}
+	17% {
+		opacity: 1;
+	}
+	25% {
+		opacity: 0;
+	}
+	92% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+@keyframes imgFade {
+	0% {
+		opacity: 1;
+	}
+	17% {
+		opacity: 1;
+	}
+	25% {
+		opacity: 0;
+	}
+	92% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+	
+#loopy img {
+	-webkit-animation-name: imgFade;
+	-webkit-animation-timing-function: ease-in-out;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-duration: 9s;
+
+	-moz-animation-name: imgFade;
+	-moz-animation-timing-function: ease-in-out;
+	-moz-animation-iteration-count: infinite;
+	-moz-animation-duration: 9s;
+
+	-o-animation-name: imgFade;
+	-o-animation-timing-function: ease-in-out;
+	-o-animation-iteration-count: infinite;
+	-o-animation-duration: 9s;
+
+	animation-name: imgFade;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+	animation-duration: 9s;
+}
+#loopy img:nth-of-type(1) {
+	-webkit-animation-delay: 9s;
+	-moz-animation-delay: 9s;
+	-o-animation-delay: 9s;
+	animation-delay: 9s;
+}
+#loopy img:nth-of-type(2) {
+	-webkit-animation-delay: 6s;
+	-moz-animation-delay: 6s;
+	-o-animation-delay: 6s;
+	animation-delay: 6s;
+}
+#loopy img:nth-of-type(3) {
+	-webkit-animation-delay: 3s;
+	-moz-animation-delay: 3s;
+	-o-animation-delay: 3s;
+	animation-delay: 3s;
+}
